feat: event list by caetegory api integration and its implementation
